fix: remove 'overflow' property in user-field class (#212)
* feat: remove 'overflow' property in user-field class

* fix: resolve issue with 'overflow' property in user-field class

---------

--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -208,7 +208,6 @@ input[type='text']:focus {
     display: inline-block;
     max-width: 11rem;
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
     text-align: right;
 }
